--- a/Annexes.tex
+++ b/Annexes.tex
@@ -29,8 +29,8 @@ Avec $a$ la résistance (dont on ne prend ici que la moitié puisque les $p_i$ s
 et $f$ les flux (voir Figure~\ref{fig:4_8_param_tubes}). Le bilan des flux à l’intersection est nul : $f_{out1} + f_{out2} + f_{out3}=0$. Nous
 avons donc 4 équations pour 4 inconnues (les flux). Ainsi on résout et on trouve :
 \begin{eqnarray}
-\frac{a_2}{2}(p_1-p_3)\,+\,\frac{a_3}{2}(p_1-p_2)\,-\,\beta_{123}f_{out1}\,=\,0;
-\frac{a_3}{2}(p_2-p_1)\,+\,\frac{a_1}{2}(p_2-p_3)\,-\,\beta_{123}f_{out2}\,=\,0;
+\frac{a_2}{2}(p_1-p_3)\,+\,\frac{a_3}{2}(p_1-p_2)\,-\,\beta_{123}f_{out1}\,=\,0;\\
+\frac{a_3}{2}(p_2-p_1)\,+\,\frac{a_1}{2}(p_2-p_3)\,-\,\beta_{123}f_{out2}\,=\,0;\\
 \frac{a_1}{2}(p_3-p_2)\,+\,\frac{a_2}{2}(p_3-p_1)\,-\,\beta_{123}f_{out3}\,=\,0;
 \end{eqnarray}
 avec $\beta_{123}=\frac{a_1}{2}\frac{a_2}{2}+\frac{a_1}{2}\frac{a_3}{2}+\frac{a_2}{2}\frac{a_3}{2}$, qui vérifie bien $f_{out1} + f_{out2} + f_{out3}=0$. Nous retrouvons ainsi l’Équation~\ref{eq:ley} décrite précédemment.
@@ -130,7 +130,7 @@ plan correspond à une intensité a sur la première image et à une intensité 
 %%%
 \begin{figure}[!t]
 \centering
-\includegraphics[width=5cm]{A_4_hist_conj}
+\includegraphics[width=10cm]{A_4_hist_conj}
 \caption{Axes d'un histogramme conjoint. Le nombre de voxel pour une combinaison de niveau de gris donnée peut être
 représenté par une couleur.}
 \label{fig:A_4_hist_conj}	
@@ -144,7 +144,7 @@ de coïncidences diminue et le niveau de gris se disperse sur l’histogramme.\\
 %%%
 \begin{figure}[!t]
 \centering
-\includegraphics[width=5cm]{A_5_ex_hist}
+\includegraphics[width=12cm]{A_5_ex_hist}
 \caption{Exemple d'histogramme conjoint obtenu par SPM après coregistration d'une image EPI d'ASL et d'un T$_1$.}
 \label{fig:A_5_ex_hist}	
 \end{figure}
