--- a/Chapitre5.tex
+++ b/Chapitre5.tex
@@ -402,6 +402,7 @@ capillaires et les veinules. Comme vu dans la partie~\ref{sec:finalisation} nous
 que des jointures en Y entre les tubes (deux tubes vers un ou l’inverse).\\
 Dans ces situations la formule doit légèrement s’adapter :
 \begin{equation}
+\label{eq:ley}
 \frac{a_{in_1}}{2}\,(P\,-\,P_{in_2})\,+\,\frac{a_{in_2}}{2}\,(P\,-\,P_{in_1})\,=\,\biggl(\frac{a_{in_1}}{2}\,\frac{a_{in_2}}{2}+\frac{a_{in_1}}{2}\,\frac{a}{2}+\frac{a_{in_2}}{2}\,\frac{a}{2}\biggr)\,f_{in},
 \end{equation}
 avec $a_{in_1}$ , $a_{in_2}$ , $P_{in_1}$ et $P_{in_2}$ les paramètres des deux parents du tube courant (voir Figure~\ref{fig:4_8_param_tubes} et Annexe~\ref{sec:deriveq}).\\
