--- a/Chapitre5.tex
+++ b/Chapitre5.tex
@@ -799,7 +799,7 @@ Dans notre simulation le premier segment de l’ACA droite du sujet est occlus. 
 capacité de compensation de l’ACoA sur le flux dans ces conditions nous avons fait varier son diamètre
 de façon similaire aux travaux de Cassot et al. (\cite{Cassot1995}). La compensation de l’ACoA est analysée en faisant
 le rapport entre le débit dans le segment en aval de l’ACoA après occlusion et avant l’occlusion,
-donnant un indice en pourcentage. Les résultats illustrés en Figure~\ref{fig:4_23_compensation_ACoA} montrent aux vue de l’intervalle
+donnant un indice en pourcentage. Les résultats illustrés en Figures~\ref{fig:4_23_compensation_ACoA},~\ref{fig:4_24_occlusion_ventricule}, et~\ref{fig:4_25_impact_occlusion} montrent aux vue de l’intervalle
 de variation de la sigmoïde1, une évolution importante de la compensation dans la gamme de diamètre
 allant de 0.37 à 1.17 mm. Les valeurs inférieures ne permettent pas une compensation efficace, et les
 valeurs plus élevées permettent d’assurer près de 90\% du débit de l’artère occluse. La limite supérieure
