--- a/Chapitre5.tex
+++ b/Chapitre5.tex
@@ -837,7 +837,7 @@ une chute du débit entrant dans le ventricule droit en fonction de la diminutio
 reflet de l’effet global sur les débits de l’occlusion. La chute est plus marquée dans le ventricule droit ipsilatéral à l’occlusion
 (5.75 \%). Le graphique de droite illustre l’évolution relative de l’aire des ventricules en fonction du diamètre de l’ACoA.
 Comme pour les débits on observe un effet plus important du côté ipsilatéral à l’occlusion, malgré tout l’évolution reste très
-faible (1.7 \%).\textcolor{red} {Cette figure ne parait pas referencee dans le texte}}
+faible (1.7 \%).}
 \label{fig:4_24_occlusion_ventricule}	
 \end{figure}
 Par ailleurs, le modèle offre l’opportunité de localiser les effets au niveau capillaire au vu des
