--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -2518,7 +2518,7 @@ year = {2010}
 
 @misc{Hahn2003,
 abstract = {The scaling properties of the portal vein and the hepatic vein are examined, based on three-dimensional computed tomography images of casts of human livers. In particular, a quantitative analysis of the branching ratio based on the Strahler ordering scheme as well as the diameter and length ratios are performed. To quantify the segment anatomy of the liver, the volume of supplied liver parenchyma is measured and related to the corresponding vessel radius. The implications of these findings for segment-oriented liver surgery are discussed. We also investigate the 3D interdependence of the intertwined portal and hepatic veins based on a concept of tree distance that will be introduced.},
-author = {HAHN, HORST K. and EVERTSZ, CARL J. G. and PEITGEN, HEINZ-OTTO and FASEL, JEAN H. D.},
+author = {Hahn, HORST K. and EVERTSZ, CARL J. G. and PEITGEN, HEINZ-OTTO and FASEL, JEAN H. D.},
 booktitle = {Fractals},
 doi = {10.1142/S0218348X03001422},
 issn = {0218-348X},
