--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -25,6 +25,7 @@ Dans ce chapitre nous allons décrire comment l’imagerie IRM permet de reconst
 Les vaisseaux sanguins ont plusieurs fonctions. Ils permettent d’apporter les nutriments et l’oxygène nécessaire au bon fonctionnement des organes, tout en étant les porteurs des messagers hormonaux à grande distance dans l’organisme. La même structure simple de circulation sanguine se reproduit dans tous les tissus (Figure~\ref{fig:1_1_schema_arteres_cap_veines}). Les artères amènent le sang oxygéné vers les muscles (dans notre cas le cerveau), ces artères se divisent en artérioles de calibres moins importants et capables d’assurer le contrôle du débit, pour enfin arriver aux capillaires, lieu d’échange moléculaire avec le tissu environnant. Le sang désoxygéné est ensuite évacué vers les veinules puis veines.
 Au niveau cérébral, nous retrouvons cette structure artères, capillaires, veines. Notons que les systèmes artériels et veineux ne sont pas symétriques.
 \subsection{Artères et artérioles}
+\label{sec:anat_art}
 \subsubsection{Architecture}
 Le cerveau est extrêmement dépendant de la circulation cérébrale du fait de son métabolisme élevé que manifeste sa sensibilité à l’ischémie (apport insuffisant de sang). La régularité de l’apport en sang dans le cerveau est assurée par plusieurs mécanismes. Structuralement, la présence de {\em vaisseaux collatéraux} fournit des voies d’accès parallèles au tissu cérébral. Dynamiquement, un système précis d’{\em autorégulation}  impliquant des phénomènes de {\em vasodilatation} et {\em vasoconstriction} régule en permanence le débit.\\
 On distingue morphologiquement et physiologiquement les circulations {\em antérieures} et {\em postérieures}. \\
@@ -64,7 +65,8 @@ Les artères se caractérisent par une média épaisse. Les artérioles, elles, 
 %%%
 \subsubsection{Données quantitatives}
 \textcolor{red}{Comme on le fait dans le paragraphe suivant, il faut ici doner quelques éléments sur les données quantitatives (longueurs, etc...)}\\
-Les données qunatitatives relatives à la {\em longueur} et au {\em diamètre} sont sujettes à de fortes variabilités individuelles, comme on l'a vu précédemment pour la structure du polygone de Willis. Dans notre travail, nous nous fixerons comme objectif de les reconstruire pour chaque sujet. Les artérioles, quand à elles, ne pourront en général pas être reconstruites à l'aide des techniques d'imagerie disponibles. Il nous faudra donc considérer des distances et des diamètres moyens issus de la littérature.  
+Les données quantitatives relatives à la {\em longueur} et au {\em diamètre} sont sujettes à de fortes variabilités individuelles, comme on l'a vu précédemment pour la structure du polygone de Willis. Dans notre travail, nous nous fixerons comme objectif de les reconstruire pour chaque sujet. BraVa, pour {\em The Brain Vasculature}, fournit une base donnée de l'architecture artérielle dans le cerveau (\cite{Wright2013}). Pour construire cette base, 61 patients (âge 31.16 $\pm$10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm$^3$) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho (\cite{neuronmorpho}). Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. Cette base nous renseigne entre autre sur le nombre de branches du système artériel et les longueurs moyennes. Ainsi le système artériel tel qu'identifié par BraVa consiste en 208.56 branches pour des longueurs allant de 27 à 43 mm avec une valeur moyenne à 34.18 mm.\\
+Les artérioles, quand à elles, ne pourront en général pas être reconstruites à l'aide des techniques d'imagerie disponibles. Il nous faudra donc considérer des longueurs et des diamètres moyens issus de la littérature ou estimé. Les artérioles ont des diamètres internes de 30 $\mu$m ou moins (\textcolor{red}{ref : Anatomy and Physiology’ 2007 Ed.2007 Edition.}).
 \textcolor{red}{A completer}
 \subsection{Microcirculation}
 \label{sect:microcirculation}
@@ -73,7 +75,7 @@ Les capillaires représentent des réseaux denses avec une densité de longueur 
 Ces données fournissent une description géométrique quantitative cohérente de la structure des capillaires. Pour chaque mm$^3$, on a 500 mm de capillaires, ce qui pour une diamètre typique inférieur a 10 $\mu$m, donne bien un volume inférieur à 5\%. et une surface de 10 mm$^2$ d'échange. Structuralement, si on suppose une organisation réticulée, cubique pour simplifier les calculs, on aboutit pour une longueur moyenne d'un capillaire de 50 $\mu$m à un réseau de 20 unités de coté, soit du point de vue hydrodynamique 400 tubes de 10 $\mu$m de diamètre en parallèle. Ces chiffres, quoique aproximatifs, donneront des ordres de grandeur pour les valeurs des résistances à préciser ultérieurement dans le modèle. \\
 Du point de vue microstructural, les capillaires ne présentent pas de tissu conjonctif périvasculaire, remplacé par les prolongements astrocytaires. On peut noter la présence de jonctions serrées réunissant les cellules endothéliales, et d’un équipement enzymatique riche et parfois spécifique. Les capillaires permettent de fournir les nutriments et le dioxygène aux tissus. Ils jouent un rôle important dans le contrôle du passage des molécules : les macromolécules ne franchissent pas la barrière hématotissulaire tandis que pour les petites molécules la perméabilité est identique à celle de la membrane cellulaire. Ils permettent le passage libre des molécules lipophiles mais requierent l’utilisation de transporteurs membranaires, parfois spécifiques, pour les molécules hydrophiles. Enfin ils assurent le contrôle du passage des cellules, en le réduisant au renouvellement lent mais constant des cellules microgliales par des précurseurs dérivant de la moelle osseuse.\\
 \subsection{Veines}
-L'union de plusieurs capillaires donne des {\em veinules} qui elles-mêmes se déversent dans des {\em veines} de diamètre croissant. Habituellement on classe les veines en fonction de leur taille. Dans l'espèce humaine, les petites veines ont un diamètre compris entre 50 $\mu$m et 1 mm; les veines moyennes ont un diamètre compris entre 1 mm et 10 mm et les larges veines ont plus d'un centimètre de diamètre. Les veinules ont le même aspect que les capillaires, mais leur diamètre est supérieur.\textcolor{red}{Donner un diamètre typique de veinule : <50$\mu$m?}\\
+L'union de plusieurs capillaires donne des {\em veinules} qui elles-mêmes se déversent dans des {\em veines} de diamètre croissant. Habituellement on classe les veines en fonction de leur taille. Dans l'espèce humaine, les petites veines ont un diamètre compris entre 50 $\mu$m et 1 mm; les veines moyennes ont un diamètre compris entre 1 mm et 10 mm et les larges veines ont plus d'un centimètre de diamètre. Les veinules ont le même aspect que les capillaires, mais leur diamètre est supérieur (inférieur à 50$\mu$m) \textcolor{red}{ref : Anatomy and Physiology’ 2007 Ed.2007 Edition.}.\\
 Comme les capillaires, les veinules interviennent dans les échanges métaboliques. Leur principale caractéristique est leur sensibilité aux agents inflammatoires qui augmentent leur perméabilité, ce qui permet la diffusion du plasma et le passage de protéines de haut poids moléculaire. Ces agents favorisent aussi l'adhérence des leucocytes aux parois vasculaires et leur diapédèse (intercalation entre les cellules endothéliales) , en ralentissant le flux sanguin. Les veines enfin disposent d’une structure similaire aux artères mais avec une lumière plus grande, une paroi plus fine avec peu d’éléments musculaires et élastiques dans la média.\\
 Le système veineux cérébral est un système interconnecté et communiquant librement, composé des {\em sinus veineux} et des {\em veines cérébrales} (\cite{Schaller2004}). Les veinules du réseau post-capillaire se regroupent en veines cheminant dans la substance blanche (veines médullaire) qui vont converger vers la surface de l'encéphale pour donner naissance à deux systèmes de veines regroupées, appelés {\em système superficiel} et {\em système profond}. Compte tenu de leur importance dans la modélisation des flux intracr\^aniens, on va en faire une description détaillée issue de~\cite{radioanatDrainage}.\\
 Le système superficiel (cortical) draine le sang du cortex et de la matière blanche sous corticale (\cite{Aydin1997}). Les veines dites superficielles ou corticales cheminent à la surface de l’encéphale et vont gagner (directement ou indirectement) par l’intermédiaire de veines collectrices plus volumineuses, un sinus veineux. Ainsi les veines corticales proches de la convexité haute se jettent directement dans le {\em sinus sagittal supérieur}, les veines des faces inférieures et latérales de l’encéphale forment des collecteurs plus volumineux (veines {\em sylviennes} en avant et latéralement, veines {\em basales} en dedans et en arrière) rejoignant soit le système profond (veines basales), soit directement un sinus.\\
@@ -115,6 +117,7 @@ Il y a en tout quatre ventricules.\\
 Le deux premiers ventricules cérébraux, sont habituellement appelés {\em ventricules latéraux}. Ils sont situés en profondeur dans chacun des deux hémisphères cérébraux. Ils présentent une forme de fer à cheval, orientée d'arrière en avant. Chaque ventricule possède une {\em corne frontale} (en avant) située dans le lobe frontal de l'hémisphère cérébral correspondant, une branche inférieure ({\em corne temporale}, sur les côtés du cerveau), une partie postérieure appelée {\em carrefour} qui rassemble les branches inférieures et supérieures, et enfin une petite zone supplémentaire, appelée {\em corne occipitale}, qui communique avec le carrefour, et se situe dans le lobe occipital.\\
 Le {\em troisième ventricule} est situé dans le diencéphale (partie du cerveau située entre les deux hémisphères). Il communique avec les ventricules latéraux de chaque côté par le {\em trou de Monro}.\\
 Le {\em quatrième ventricule}, se situe sous le troisième, entre le cervelet, et le tronc cérébral. Ce ventricule communique avec le troisième ventricule par l'{\em aqueduc de Sylvius}, et avec la surface de l'encéphale, par trois orifices qui sont le {\em trou de Magendie} et les deux {\em trous de Luschka}. Enfin, ce ventricule communique avec le reste de la moelle épinière par l'intermédiaire d'un canal allant du bas du ventricule vers le canal de l'épendyme situé au centre de la moelle épinière.
+Les ventricules représentent 2\% du volume total du cerveau soit 37 mL (\textcolor{red}{ref : http://www.ncbi.nlm.nih.gov/pubmed/21120804 et http://www.ncbi.nlm.nih.gov/pubmed/20182051 } .
 %%%
 %%%
 %%%
