--- a/Chapitre3.tex
+++ b/Chapitre3.tex
@@ -197,11 +197,11 @@ Les rayons moyens des différents compartiments peuvent être visualisés (Figur
 \begin{table}
 \caption{Caractéristiques de l'architecture selon différents modèles. Les aires doivent certainement être multipliées par le nombre de vaisseaux pour correspondre aux données de zagzoule. Le nombre d'artérioles, capillaires et veinules de notre modèle regroupe un ensemble de vaisseaux d'un territoire.}
 \label{tab:tab_profil_rayons}
-\begin{tabular}[!t]{l|ll}
+\begin{tabular}[!t]{l|l l}
 \centering
-      & Zagzoule & BraVa & Notre modèle  \\
+      & Zagzoule & Notre modèle  \\
 \hline
-   Artères : aire (mm²) & 3.41(cm²!) (5.6 \%)&  5.43  (0.8 \%)\\
+   Artères : aire (mm²) & 3.41(cm²!) (5.6 \%)&  5.43  (0.8 \%) \\
    Artères : longueur (mm) & 83 &  29 \\
    Artères : nombre & 3950 &  115 \\
    Artérioles : aire (mm²) & 4.74 (cm²)  (7.7 \%)&  60.5  (8.7 \%)\\
