--- a/jeremythesebib.bib
+++ b/jeremythesebib.bib
@@ -2810,4 +2810,16 @@ howpublished = {\url{http://http://http://www.personal.soton.ac.uk/dales/morpho/
 year         = {2001}
 }
 
+@book{Martini2009,
+abstract = {Frederic Martini builds on his best-selling text by enhancing the award-winning art program, improving the clarity of the text, and adding an elegant, reader-friendly design to the Seventh Edition.Every student package automatically includes theInterActive Physiology CD-ROM, the Anatomy 360 CD-ROM, and access to The Anatomy \& Physiology Place companion website and MyA\&P. Convenient references help students seamlessly integrate each component into their study routine and soar through key concepts and applications. Fundamentals of Anatomy \& Physiology, Seventh Edition now incorporates Anatomy 360, an engaging new anatomy media supplement, to create a powerful, integrated learning system. Along with enhancements to its award-winning art program and time-saving pedagogy, the coordination between narrative discussions and corresponding art has been tightened to improve clarity. The clear, concise explanations lead students through complex processes, helping them keep sight of the big picture without getting lost in the details.},
+author = {{Martini, F.H \& Nath}, J.},
+booktitle = {Learning},
+isbn = {0766804984},
+pages = {1123},
+pmid = {1493565},
+title = {{Fundamentals of Anatomy and Physiology}},
+volume = {7th},
+year = {2009}
+}
+
 
