--- a/Chapitre2.tex
+++ b/Chapitre2.tex
@@ -64,10 +64,38 @@ Les artères se caractérisent par une média épaisse. Les artérioles, elles, 
 %%%
 %%%
 \subsubsection{Données quantitatives}
-\textcolor{red}{Comme on le fait dans le paragraphe suivant, il faut ici doner quelques éléments sur les données quantitatives (longueurs, etc...)}\\
-Les données quantitatives relatives à la {\em longueur} et au {\em diamètre} sont sujettes à de fortes variabilités individuelles, comme on l'a vu précédemment pour la structure du polygone de Willis. Dans notre travail, nous nous fixerons comme objectif de les reconstruire pour chaque sujet. BraVa, pour {\em The Brain Vasculature}, fournit une base donnée de l'architecture artérielle dans le cerveau (\cite{Wright2013}). Pour construire cette base, 61 patients (âge 31.16 $\pm$10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm$^3$) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho (\cite{neuronmorpho}). Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. Cette base nous renseigne entre autre sur le nombre de branches du système artériel et les longueurs moyennes. Ainsi le système artériel tel qu'identifié par BraVa consiste en 208.56 branches pour des longueurs allant de 27 à 43 mm avec une valeur moyenne à 34.18 mm.\\
-Les artérioles, quand à elles, ne pourront en général pas être reconstruites à l'aide des techniques d'imagerie disponibles. Il nous faudra donc considérer des longueurs et des diamètres moyens issus de la littérature ou estimé. Les artérioles ont des diamètres internes de 30 $\mu$m ou moins (\textcolor{red}{ref : Anatomy and Physiology’ 2007 Ed.2007 Edition.}).
-\textcolor{red}{A completer}
+Les données quantitatives relatives à la {\em longueur} et au {\em diamètre} sont sujettes à de fortes variabilités individuelles, comme on l'a vu précédemment pour la structure du polygone de Willis. Dans notre travail, nous nous fixerons comme objectif de les reconstruire pour chaque sujet. Cependant, à titre de référence, le projet {\bf BraVa}, pour {\em The Brain Vasculature}, fournit une base de données relatives à l'architecture artérielle dans le cerveau (\cite{Wright2013}). Pour construire cette base, 61 patients (âge 31.16 $\pm$10.03) ont subit une imagerie IRM par temps de vol (résolution 0.6 x 0.6 x 0.6mm$^3$) . Pour chaque sujet, une identification manuelle des artères a été réalisée via ImageJ et le plugin Neuron\_Morpho (\cite{neuronmorpho}). Ainsi une identification fine du nombre de segments et de leurs caractéristiques (longueur, tortuosité etc.) est disponible et mis à disposition en ligne. Cette base nous renseigne entre autre sur le nombre de branches du système artériel et les longueurs moyennes. Ainsi le système artériel tel qu'identifié par BraVa consiste en moyenne chez les sujets en 208.56 branches pour des longueurs allant de 27 à 43 mm avec une valeur moyenne à 34.18 mm.\\
+Le tableau~\ref{tab:databrava} récapitule les données issues de ce travail de morphologie quantitative pertinentes pour nous. Les longueurs des {\em artères cérébrales antérieures}, {\em artères cérébrales moyennes} et {\em artères cérébrales postérieures} sont disponibles (branches {\em droites} et {\em gauches}) pour chacun des 61 sujets. L'ampleur de la variabilité individuelle en termes de longueurs de ces artères renforce clairement la volonté de construire une modélisation sujet-spécifique. Ces données permettent tout de même de disposer d'{\em ordres de grandeur} permettant de vérifier la pertinence de nos segmentations.
+%%%
+\begin{table}
+\caption{Longueur des {\em artères cérébrales antérieures}, {\em artères cérébrales moyennes} et {\em artères cérébrales postérieures} telles que mesurées dans le projet BraVa pour 61 sujets (données extraites de la base BraVa en ligne \textcolor{red}{\tt cng.gmu.edu/brava/}).}
+\label{tab:databrava}
+\begin{tabularx}{\linewidth}{|X|X X X X|}
+\hline
+\centering
+      & Longueur Moyenne (mm) & Déviation Standard (mm) & Minimum (mm) & Maximum  (mm)\\
+ \hline
+   {\small Artère Cérébrale Antérieure gauche} & {\bf 865.02}	&194.74	&318.14	&1295.80 \\
+\hline
+    {\small Artère Cérébrale Antérieure droite} & {\bf  889.70}	& 205.38	&233.96	&1344.20 \\
+\hline
+    {\small Artère Cérébrale Postérieure gauche}  &  {\bf 492.96}	&118.13	&227.87	&747.71 \\
+\hline
+   {\small Artère Cérébrale Postérieure droite } &  {\bf 508.69}	&128.30	&245.07	&770.19\\
+\hline
+   {\small Artère Cérébrale Moyenne gauche} & {\bf  1899.90}	&294.24	&1271.74	&2635.63 \\
+\hline
+   {\small Artère Cérébrale Moyenne  droite} &  {\bf 1856.52}	&296.41	&966.78	&2507.67 \\
+   
+\hline
+
+\end{tabularx}
+\end{table}
+
+
+
+
+Les artérioles, quand à elles, ne pourront en général pas être reconstruites à l'aide des techniques d'imagerie disponibles. Il nous faudra donc considérer des longueurs et des diamètres moyens issus de la littérature ou estimés. On considère en général que les artérioles ont des diamètres internes de 30 $\mu$m ou moins (\cite{Martini2009}).
 \subsection{Microcirculation}
 \label{sect:microcirculation}
 En raison du caractère invasif des techniques requises pour son étude, les caractérisations de la microanatomie chez l’homme sont rares (\cite{Brett2002}) et il n’existe dans la littérature que peu de données quantitatives sur la microvascularisation cérébrale. Néanmoins une étude récente au moins a permis une caractérisation morphologique de cette microcirculation (\cite{Lauwers2008}). Il a ainsi été observé une taille moyenne des capillaires de 6.47 $\mu$m de diamètre pour une longueur de 52.95 $\mu$m et ce avec une remarquable constance. On considère de manière générale que les capillaires sont des vaisseaux de diamètre inférieur à 10 $\mu$m. L’organisation topologique des capillaires ne fait pas l’objet d’un consensus clair notamment entre organisation en {\em réseau}, et organisation en {\em arbre}. Il semble néanmoins admis que les capillaires s’organisent préférentiellement en réseau de façon à ce que tout soit connecté, c’est-à-dire que l’ensemble du réseau puisse être complètement perfusé quelle que soit l’entrée. Quelques structures en arbre avec une entrée de subdivisant en plusieurs vaisseaux ont malgré tout été observées.\\
